--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -23,13 +23,14 @@ body {
 
 .container {
     display: grid;
-    grid-template-columns: [margin-start] minmax(1rem, 10vw) [center-start] repeat(4, [col-start] 1fr [col-end]) [center-end] minmax(1rem, 10vw) [margin-end]; 
+    grid-template-columns: [margin-start] minmax(1rem, 10vw) [center-start] repeat(4, [col-start] 1fr [col-end]) [center-end]
+                           minmax(1rem, 10vw) [margin-end]; 
     align-items: center;
 }
 
 .pattern {
     &__top {
-        translate: -40% -17%;
+        transform: translate(-40%, -17%);
         grid-column: margin-start / col-end 2;
         grid-row: 1 / 2;
         align-self: start;
@@ -42,7 +43,7 @@ body {
     }
 
     &__bottom {
-        translate: 71%;
+        transform: translateX(71%);
         justify-self: end;
         align-self: end;
         grid-column: col-start 3 / margin-end;
