--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -201,6 +201,7 @@
 ////////////////////////////////////////////////////////////
 ////////////////////APP'S INPUT BAR/////////////////////////
 .input {
+    position: relative;
     display: flex;
     justify-content: end;
     align-items: center;
@@ -217,11 +218,11 @@
     }
 
     &__btn {
-        display: inline;
+        display: inline-block;
         position: absolute;
+        right: 2%;
         width: 3.5rem;
         height: 3.5rem;
-        margin-right: .5%;
         border: none;
         border-radius: 50%;
         padding: .5rem;
