--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -149,8 +149,13 @@
         transition: ease-in .25s;
     }
 
+    &__img:active {
+        transform: translate(0%,-15%);
+        box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.20);
+    }
+
     &__img:hover {
-        translate: 0% -15%;
+        transform: translate(0%,-15%);
         box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.20);
     }
 }
@@ -226,9 +231,16 @@
         border: none;
         border-radius: 50%;
         padding: .5rem;
+        outline: none;
+        cursor: pointer;
+        transition: ease-out .2s;
         background-color: $color-secondary-2;
     }
 
+    &__btn:hover {
+        transform: translateY(-5%);
+        box-shadow: 0 .2rem 1rem rgba(0, 0, 0, 0.425);
+    }
     &__icon {
         width: 2.5rem;
         height: 2.5rem;
