--- a/css/main.css
+++ b/css/main.css
@@ -364,7 +364,16 @@ body {
   transition: ease-in .25s;
 }
 
+.gallery__img:visited {
+  -webkit-transform: translate(0%, 0%);
+          transform: translate(0%, 0%);
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
 .gallery__img:active {
+  width: 15rem;
+  height: 15rem;
   -webkit-transform: translate(0%, -15%);
           transform: translate(0%, -15%);
   -webkit-box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.2);
