--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -61,5 +61,6 @@ body {
 .attribution {
     grid-column: center-start / center-end;
     grid-row: 4 / 5;
+    z-index: 2;
     margin-bottom: 5vh;
 }
