Removed Input bar's outline style

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -214,6 +214,7 @@
         border: none;
         border-radius: 10rem;
         padding: 1.7rem 2rem;
+        outline: none;
         color: $color-primary-4;
     }
 
