--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -146,7 +146,7 @@
         height: 6rem;
         margin: 0 .55rem;
         border-radius: 1.5rem;
-        transition: ease-in .25s;
+        transition: all .20s;
     }
 
     &__img:hover {
